# TOMB5

./: .gitignore  .travis.yml  CLEAN_PSX.bat  CMakeLists.txt  CODEWAD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EMSCRIPTEN.bat  LICENSE  LINK.LNK  MODULE.md  Makefile  MakefileSAT  PSX_BUILD.bat  PSX_CLEAN.bat  PSX_CREATE_CODEWAD.bat  PSX_CREATE_GAMEWAD.bat  PSX_EXPORT_OVERLAYS.bat  PSX_LINK.bat  PSX_MOVE_OVERLAYS.bat  PSX_SLINK.bat  README.md  SAT_CLEAN.bat  SAT_LINK.LNK  SAT_LINK.bat  TIPS.md  appveyor.yml  macports-ci  refresh_impl.py  version.bat
ANDROID/: .gitignore  build.gradle  settings.gradle
CMAKE/: FindD3D9.cmake  FindGLEW.cmake  FindSDL2.cmake  FindZLIB.cmake  GetGitRevisionDescription.cmake
DISC/: MAKEISO.BAT  SYSTEM.TXT  TOMB5US.XML  TOMB5US_NOFMV.XML  TOMB5US_NOFMVNOXA.XML
EMULATOR/: ABS.C  ABS.H  CMakeLists.txt  CRASHHANDLER.C  CRASHHANDLER.H  EMULAOR_PLATFORM_SETUP.H  EMULATOR.C  EMULATOR.H  EMULATOR_GLOBALS.H  EMULATOR_PLATFORM_SETUP.H  EMULATOR_PRIVATE.H  EMULATOR_VERSION.H  GTEREG.H  INLINE_C.C  INLINE_C.H  KERNEL.H  LIBAPI.C  LIBAPI.H  LIBCD.C  LIBCD.H  LIBETC.C  LIBETC.H  LIBGPU.C  LIBGPU.H  LIBGTE.C  LIBGTE.H  LIBMCRD.C  LIBMCRD.H  LIBPAD.C  LIBPAD.H  LIBPRESS.C  LIBPRESS.H  LIBSN.C  LIBSN.H  LIBSPU.C  LIBSPU.H  MALLOC.C  MALLOC.H  STDDEF.H  STDIO.H  (+5 more)
EMULATOR/PLATFORM/: Android.cmake  Emscripten.cmake  Linux.cmake  Mingw.cmake  Windows.cmake
EMULATOR/SYS/: TYPES.H
EMULATOR/shaders/: blit_shader_dx11.hlsl  compile_d3d11.bat  compile_d3d9.bat  compile_xed3d.bat  gte_shader.hlsl  gte_shader_16.hlsl  gte_shader_16_dx11.hlsl  gte_shader_4.hlsl  gte_shader_4_dx11.hlsl  gte_shader_8.hlsl  gte_shader_8_dx11.hlsl
GAME/: ANDREA1.C  ANDREA1.H  ANDREA2.C  ANDREA2.H  ANDREA3.C  ANDREA3.H  ANDY1.C  ANDY1.H  ANDY2.C  ANDY2.H  ANDY3.C  ANDY3.H  ANDY3.LNK  ANIM.C  ANIM.H  BOX.C  BOX.H  CAMERA.C  CAMERA.H  CDTRACKS.H  CODEWAD.C  CODEWAD.H  COLLIDE.C  COLLIDE.H  CONTROL.C  CONTROL.H  DEBRIS.C  DEBRIS.H  DELSTUFF.C  DELSTUFF.H  DELTAPAK.C  DELTAPAK.H  DOOR.C  DOOR.H  DRAW.C  DRAW.H  EFFECT2.C  EFFECT2.H  EFFECTS.C  EFFECTS.H  (+104 more)
SPEC_GBA/: 3D_GEN.H  3D_OBJ.C  ANIMITEM.C  BUBBLES.C  CALCHAIR.C  CALCLARA.H  CD.C  CMakeLists.txt  COLLIDE_S.H  CONTROL_S.C  DRAWOBJ.C  DRAWPHAS.C  DRAWSKY.H  DRAWSPKS.C  DRAWSPKS.H  FXTRIG.H  GETSTUFF.C  GPU.C  GPU.H  GTEMATH.C  GTEMATH.H  LARA1.C  LARA1.H  LARA2.C  LARA3.C  LARA3.H  LARA4.C  LARA5.C  LARA5.H  LOADSAVE.C  MALLOC.C  MALLOC.H  MATHS.C  MEMCARD.C  MISC.C  PRINTOBJ.C  PROFILE.C  PSOUTPUT.C  PSXINPUT.C  PSXMAIN.C  (+15 more)
SPEC_PC/: 3D_GEN.C  3D_GEN.H  CD.C  CD.H  CMakeLists.txt  DIRECTX.CPP  DIRECTX.H  DRAWPHAS.C  DRAWPHAS.H  ERROR.C  ERROR.H  FILE.C  FILE.H  GAME.C  GAME.H  GPU.C  GPU.H  LOADSAVE.C  LOADSAVE.H  MALLOC.C  MALLOC.H  MATHS.C  MATHS.H  PCINPUT.C  PCINPUT.H  PCSOUND.C  PCSOUND.H  RCa24416  ROOMLOAD.C  ROOMLOAD.H  SETUP.RC  SPECIFIC.C  SPECIFIC.H  SPECTYPES.H  WINMAIN.C  WINMAIN.H  resource.h
SPEC_PC_N/: 3DGLOBAL.CPP  3DGLODEF.H  CALCHAIR.CPP  CALCHAIR.H  CALCLARA.C  CALCLARA.H  CMakeLists.txt  DEBUG.CPP  DEBUG.H  DI.H  DIRECTX.CPP  DIRECTX.H  DISPLAY.CPP  DISPLAY.H  DRAWPRIMITIVE.CPP  DRAWPRIMITIVE.H  DS.CPP  DS.H  DXERROR.CPP  FILE.CPP  FILE.H  GAME.CPP  GAME.H  GLOBAL.H  HWINSERT.CPP  HWINSERT.H  HWRENDER.H  INCLUDE.H  INIT.CPP  INIT.H  INPUT.CPP  INPUT.H  MATRIX_SHIT.CPP  NEWSHIT.CPP  NEWSHIT.H  PCSETUP.CPP  PCSETUP.H  PCTIME.H  PICTURE.CPP  PICTURE.H  (+23 more)
SPEC_PSX/: 3D_GEN.C  3D_GEN.H  3D_OBJ.C  3D_OBJ.H  ANIMITEM.C  ANIMITEM.H  ANIMITEM.MIP  BUBBLES.C  BUBBLES.H  BUBBLES.MIP  BUBBLES_ASM.MIP  CALCHAIR.H  CALCHAIR.MIP  CALCLARA.C  CALCLARA.H  CALCLARA.MIP  CALCLARA_ASM.MIP  CARDHDR.MIP  CD.C  CD.H  CMakeLists.txt  COLLIDE_S.H  COLLIDE_S.MIP  CONTROL_S.MIP  DELTAPAK_S.C  DELTAPAK_S.MIP  DELTAPAK_S_ASM.MIP  DIV3TAB.TBL  DIV4TAB.TBL  DRAWOBJ.C  DRAWOBJ.H  DRAWOBJ.MIP  DRAWOBJ_ASM.MIP  DRAWPHAS.C  DRAWPHAS.H  DRAWSKY.C  DRAWSKY.H  DRAWSKY.MIP  DRAWSKY_ASM.MIP  DRAWSPKS.C  (+105 more)
SPEC_PSX/BACKUP/: CALCLARA.C  DRAWOBJ.C  MISC.C
SPEC_PSXPC/: 3D_GEN.C  3D_GEN.H  3D_OBJ.C  3D_OBJ.H  BUBBLES.C  BUBBLES.H  CALCHAIR.C  CALCLARA.C  CALCLARA.H  CARDHDR.C  CARDHDR.H  CD.C  CD.H  CMakeLists.txt  CONTROL.H  CONTROL_S.C  DELTAPAK_S.C  DELTAPAK_S.H  DRAWOBJ.C  DRAWPHAS.C  DRAWPHAS.H  DRAWSPKS.C  DRAWSPKS.H  FILE.C  FILE.H  FMV.C  FMV.H  FOOTPRNT.C  FXDRAW.H  FXTRIG.C  FXTRIG.H  GAMEWAD.C  GAMEWAD.H  GETSTUFF.C  GETSTUFF.H  GPU.C  GPU.H  GTE.C  GTE.H  LIGHT.C  (+50 more)
SPEC_PSXPC_N/: 3D_GEN.C  3D_OBJ.C  ANIMITEM.C  ANIMITEM.H  BUBBLES.C  BUBBLES.H  CALCHAIR.C  CALCLARA.C  CALCLARA.H  CD.C  CD.H  CMakeLists.txt  COLLIDE_S.C  COLLIDE_S.H  CONTROL_S.C  DELTAPAK_S.C  DELTAPAK_S.H  DRAWOBJ.C  DRAWOBJ.H  DRAWPHAS.C  DRAWPHAS.H  DRAWSKY.C  DRAWSKY.H  DRAWSKY.MIP  DRAWSPKS.C  DRAWSPKS.H  FILE.C  FILE.H  FOOTPRNT_S.C  FOOTPRNT_S.H  FXDRAW.MIP  FXTRIG.C  FXTRIG.H  FXTRIG.MIP  GETSTUFF.C  GETSTUFF.H  GETSTUFF.MIP  GLOBAL.INC  GLOBALS.MIP  GPU.C  (+61 more)
SPEC_PSXPC_N/PLATFORM/: Android.cmake  Emscripten.cmake  Linux.cmake  Mingw.cmake  Windows.cmake
SPEC_PSX_BACKUP/: BUBBLES.C  COLLIDE_S.C  DELTAPAK_S.MIP  DRAWSKY.C  DRAWSKY.H  FOOTPRNT_ASM.MIP  FXTRIG.C  GETSTUFF.C  MATHS.C  MISC_ASM - Copy.MIPx  MOVIE.C  MOVIE_ASM.MIP2  ROOMLETB.C  ROOMLETB_ASM - Copy.MIPx  ROOMLETB_ASM.MIP  SFX.C  SHADOWS.C  SPECTYPES.H  SPHERES.H  SPHERES_ASM.MIP  TEXT_S.C  TEXT_S_ASM.MIP
SPEC_PSX_PAELLA/: ANIMITEM.H  CD.H  CMakeLists.txt  COLLIDE_S.MIP  CONTROL_S.H  GPU.C  GPU.H  LOADSAVE.C  MALLOC.C  MISC.H  MOVIE.H  PSXMAIN.C  REQUEST.C  ROOMLOAD.C  SFX.H  SHADOWS.H  SPECIFIC.C  SPECIFIC.H  SPHERES.H  SPUSOUND.C  SPUSOUND.H  TEXT_S.MIP
TOOLS/: CMakeLists.txt
TOOLS/CODEWAD_Pack/: CMakeLists.txt  CODEWAD.CPP  CODEWAD.H  FILES.CPP  FILES.H  MAIN.CPP
TOOLS/CODEWAD_Unpack/: CMakeLists.txt  CODEWAD.CPP  CODEWAD.H  FILES.H  MAIN.CPP
TOOLS/DEL2FAB/: CMakeLists.txt  MAIN.C
TOOLS/GAMEWAD/: CMakeLists.txt  FILES.CPP  GAMEWAD.CPP  GAMEWAD.H  IO.H
TOOLS/GAMEWAD_Pack/: CMakeLists.txt  FILES.CPP  FILES.H  GAMEWAD.CPP  GAMEWAD.H  IO.H  MAIN.CPP
TOOLS/GAMEWAD_Unpack/: CMakeLists.txt  FILES.CPP  FILES.H  GAMEWAD.CPP  GAMEWAD.H  IO.H  MAIN.CPP
iepaella/: iepaella.def  iepaella.exp  iepaella.h  (+1 more)
(+14 files in other folders)
